--- a/HTML/header.html
+++ b/HTML/header.html
@@ -18,11 +18,45 @@
                     <ul>
                         <li>Home</li>
                         <li>About</li>
+                        <li class="menu-item">
+                            Services
+                            <div class="sub-menu-items">
+                                <ol class="items">
+                                    <li>IT training</li>
+                                    <li>Tutions</li>
+                                        <ol class="item">
+                                            <li>Maths</li>
+                                            <li>Science</li>
+                                            <li>Health</li>
+                                        </ol>
+                                    <li>IELTS</li>
+                                </ol>
+                                <ol class="items">
+                                    <li>IT training</li>
+                                    <li>Tutions</li>
+                                        <ol class="item">
+                                          <li>Maths</li>
+                                          <li>Science</li>
+                                          <li>Health</li>
+                                        </ol>
+                                    <li>IELTS</li>
+                                </ol>
+                                <ol class="items">
+                                    <li>IT training</li>
+                                    <li>Tutions</li>
+                                       <ol class="item">
+                                            <li>Maths</li>
+                                            <li>Science</li>
+                                            <li>Health</li>
+                                        </ol>
+                                    <li>IELTS</li>
+                                </ol>
+                            </div>
+                        </li>
                         <li>Contact</li>
                     </ul>
 
                 </div>
-
             </div>
         </div>
     </header>
