--- a/New Flex/newflex.html
+++ b/New Flex/newflex.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="newflex.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="logo">
+            <img class="" src="https://th.bing.com/th/id/OIP.fFWL6w75QwbvSxxwk3cyxwHaE_?w=216&h=180&c=7&r=0&o=5&pid=1.7">
+        </div>
+            
+    </header>
     <div class="main-content">
         <div class="left-content">
             <div class="left-up">
@@ -31,10 +36,10 @@
         </div>
 
         <div class="right-content">
-            <div>right left</div>
+            <div class="right-left">right left</div>
             <div class="right-right">
-                <div>right up</div>
-                <div>right down</div>
+                <div class="right-up">right up</div>
+                <div class="right-down">right down</div>
             </div>
         </div>
 
