--- a/Flex Layout/flex.html
+++ b/Flex Layout/flex.html
@@ -12,9 +12,28 @@
             <img src="https://www.seoclerk.com/pics/000/957/729/07867e352938f152c819d5da8b915254.jpg">
         </div>
         <div class="content">
-            <ol>Home</ol>
-            <ol>Service</ol>
-            <ol>About</ol>
+            <div>Home</div>
+            <div class="item">Service            
+                <div class="sub-menu-items">
+                    <ol class="items">
+                        <li>IT Training</li>
+                            <ol class="">
+                                <li>MERN Stack</li>
+                                <li>Java</li>
+                                <li>C-Programming</li>
+                            </ol>
+                        <li>Tutions</li>
+                            <ol class="">
+                                <li>Maths</li>
+                                <li>Science</li>
+                                <li>Health</li>
+                            </ol>
+                        <li>IELTS</li>
+                                
+                    </ol>
+                </div>
+            </div>
+            <div>About</div>
         </div>
         <div class="button">
             <button class="Sign-In">Sign In</button> 
